change visiblity of small elements to none so the form is always the correct height

--- a/style.css
+++ b/style.css
@@ -68,7 +68,8 @@ form {
 	box-shadow: 0px 10px 5px 0px hsl(0, 44%, 48%);
 }
 .form-field {
-	margin: 1rem 0;
+	margin: 1rem;
+	padding-bottom: 1.5rem;
 	position: relative;
 }
 input {
@@ -120,11 +121,19 @@ h3 {
 	top: 1.2rem;
 	right: 0.75rem;
 }
-small {
+.form-field small {
 	float: right;
 	color: hsl(0, 100%, 74%);
 	font-size: 0.75rem;
 	font-style: italic;
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	visibility: hidden;
+}
+
+.form-field.error small {
+	visibility: visible;
 }
 
 /* attribution styles */
